<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.publishing.curs.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home"></fragment>

    <fragment
        android:id="@+id/navigation_catalog"
        android:name="com.publishing.curs.ui.catalog.CatalogFragment"
        android:label="@string/title_catalog"
        tools:layout="@layout/fragment_catalog"></fragment>

    <fragment
        android:id="@+id/navigation_contact"
        android:name="com.publishing.curs.ui.contact.ContactFragment"
        android:label="@string/title_contact"
        tools:layout="@layout/fragment_contact" />

    <activity
        android:id="@+id/bookActivity"
        android:name="com.publishing.curs.ui.book.BookActivity"
        android:label="activity_book"
        tools:layout="@layout/activity_book">
        <argument
            android:name="BOOK_ID"
            app:argType="long" />
    </activity>

    <activity
        android:id="@+id/bookSampleActivity"
        android:name="com.publishing.curs.ui.booksample.BookSampleActivity"
        android:label="activity_book_sample"
        tools:layout="@layout/activity_book_sample">
        <argument
            android:name="BOOK_ID"
            app:argType="long" />
    </activity>
</navigation>